--- a/index.html
+++ b/index.html
@@ -5,11 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+    <script src="scripts.js"></script>
     <title>Feedback</title>
 </head>
 
 <body>
-
+    <div class="modal">
+        <button id="close-modal">
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </button>
+        <div class="screen" id="screen_1">
+            <h2>How did we do?</h2>
+            <p>Let us know how your experience using our website was. All your feedback is appreciated!</p>
+            <div class="stars">
+                <img src="assets/star_empty.png" alt="star">
+                <img src="assets/star_empty.png" alt="star">
+                <img src="assets/star_empty.png" alt="star">
+                <img src="assets/star_empty.png" alt="star">
+                <img src="assets/star_empty.png" alt="star">
+            </div>
+        </div>
+        <div class="screen" id="screen_2">
+            <h2>Tell us more!</h2>
+            <p>Your rating:
+                <span class="inline-stars">
+                    <img src="assets/star_empty.png" alt="star">
+                    <img src="assets/star_empty.png" alt="star">
+                    <img src="assets/star_empty.png" alt="star">
+                    <img src="assets/star_empty.png" alt="star">
+                    <img src="assets/star_empty.png" alt="star">
+                </span>
+            </p>
+            <p>
+                What are our strong spots? What can we work on improving? Don’t hold back, we care!
+            </p>
+            <textarea placeholder="Your feedback here..."></textarea>
+            <button id="sub">Submit</button>
+        </div>
+        <div class="screen" id="screen_3">
+            <h2>Thank You!</h2>
+            <p>
+                Your feedback will help us to improve the user experience and design of our website!
+            </p>
+            <button id="close">Close</button>
+        </div>
+    </div>
 </body>
 
 </html>
